# lv_port_linux

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  Kconfig  Makefile  README.md  demo  lv_conf.defaults  lv_conf.defconfig  lv_conf.h  lv_demo_conf.h  lv_drv_conf.h  lv_ex_conf.h  main.c  manifest.json  mouse_cursor_icon.c  user_cross_compile_setup.cmake  wayland_xdg_shell.c
.github/workflows/: build.yml  get_started.yml  gstreamer-webrtc-test.yml
backends/: interface.h  settings.h  wayland.c
boards/f-and-s_picocoremx93/: README.md  manifest.json
boards/glyn_qsgq-yn1/: README.md
boards/glyn_ui2-starter-kit/: README.md  kirkstone.patch  manifest.json
boards/nxp_imx93/: README.md  manifest.json
boards/renesas/rz-g3e-evkit/: README.md  manifest.json
boards/renesas_rz-g3e-evkit/: README.md  manifest.json
boards/stm32mp157f-dk/: README.md  manifest.json  stm32mp157f-dk.avif
boards/texas-instruments_sk-am62b-p1/: README.md  manifest.json
boards/texas-instruments_sk-am62l/: README.md  manifest.json
boards/texas-instruments_sk-am62p-lp/: README.md  manifest.json
boards/toradex-verdin_am62/: README.md  manifest.json
boards/toradex-verdin_imx8m-mini/: README.md  manifest.json
boards/toradex-verdin_imx8m_mini/: README.md  manifest.json
configs/: drm-egl-2d.defaults  drm-egl-3d.defaults  fbdev.defaults  get_started.defconfig  glfw-3d.defaults  glfw.defaults  linux-default-settings.defaults  sdl.defaults  wayland-egl.defaults  wayland-g2d.defaults  wayland.defaults
docker/: Dockerfile_DEBIAN  Dockerfile_RHEL  Dockerfile_cross  Dockerfile_gstreamer_webrtc_test
example/: CMakeLists.txt  main.c
lv_port_linux_frame_buffer-master/: .gitmodules  lv_conf.h  lv_drv_conf.h  main.c
scripts/: backend_conf.sh  build_app.sh  docker_setup.sh  gen_wl_protocols.sh  testing.sh
src/: lv_font_my_montserrat_20.c  main.c  mouse_cursor_icon.c  schedule_data.c  schedule_data.h  schedule_ui.c  schedule_ui.h  simulator.c  smiths_bg.c  time_date_display.c  time_date_display.h  util.c  util.h
src/backends/: drm.c  fbdev.c  glfw3.c  interface.h  sdl.c  settings.h  wayland.c
src/lib/: available_backends.h  backends.h  driver_backends.c  driver_backends.h  lv_driver_backends.c  lv_driver_backends.h  lv_simulator_settings.h  lv_simulator_util.c  lv_simulator_util.h  mouse_cursor_icon.c  simulator_settings.h  simulator_util.c  simulator_util.h
src/lib/display_backends/: drm.c  fbdev.c  glfw3.c  sdl.c  wayland.c  x11.c
src/lib/indev_backends/: evdev.c  libinput.c
tests/: CMakeLists.txt  README.md
tests/ref_imgs/gstreamer/: README.md
tests/scripts/: build_gst_plugins_rs.sh  run_gstreamer_webrtc_test.sh
tests/src/: test_gstreamer_webrtc.c
tests/wayland_protocols/: wayland_xdg_shell.h
